k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-detector
  labels:
    app: ai-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-detector
  template:
    metadata:
      labels:
        app: ai-detector
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ai-detector
          image: us-central1-docker.pkg.dev/ai-detector-pipeline/ai-detector-repo/ai-detector:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
